--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ events {
 
 http {  
   server_tokens off;
-  Include  mime.types;
+  include mime.types;
   default_type application/octet-stream;
 
   charset_types 
