--- a/default.conf
+++ b/default.conf
@@ -26,10 +26,10 @@ server {
     }
 
   # Block WordPress author scans
-  If ($args ~ “author=\d) { return 403; }
+  if ($args ~ “author=\d) { return 403; }
 
   # Block WordPress plugin scans
-  location ~* (readme|license|example|changelog}\.(txt|html)$ {
+  location ~* (readme|license|example|changelog)\.(txt|html)$ {
     return 403;
   }
   location ~* ^(/wp-content/plugins/.*/)$ {
