--- a/default.conf
+++ b/default.conf
@@ -31,7 +31,7 @@ server {
     }
     
     # Block WordPress author scans
-    if ($args ~ “author=\d) { return 403; }
+    if ($args ~ author=\d) { return 403; }
     
     # Block WordPress plugin scans
     location ~* (readme|license|example|changelog)\.(txt|html)$ {
