no purge by default

--- a/default.conf
+++ b/default.conf
@@ -69,13 +69,13 @@ server {
 	fastcgi_cache_valid 200 60m;
 
     }
-    location ~ /purge(/.*) {
-        # Allow purge only from the webserver
-        allow 127.0.0.1;
-	deny all;
-        
-        fastcgi_cache_purge WORDPRESS "$scheme$request_method$host$1";
-    }
+#    location ~ /purge(/.*) {
+#        # Allow purge only from the webserver
+#        allow 127.0.0.1;
+#	deny all;
+#        
+#        fastcgi_cache_purge WORDPRESS "$scheme$request_method$host$1";
+#    }
     
     location ~*  \.(jpg|jpeg|png|gif|ico|css|js|xml)$ {
         access_log off;
